--- a/synergy/mx/templates/scheduler_freerun_entries.html
+++ b/synergy/mx/templates/scheduler_freerun_entries.html
@@ -20,7 +20,7 @@
                 <th scope="col"></th> <!-- Trigger Now -->
                 <th scope="col">Next Run In</th>
                 <th scope="col">Arguments</th>
-                <th scope="col"></th> <!-- View Uow --><!-- Uow Log --><!-- Event Log -->
+                <th scope="col"></th> <!-- View Uow --><!-- Uow Log --><!-- Timeline -->
                 <th scope="col"></th> <!-- Cancel Uow --><!-- Edit -->
             </tr>
         </thead>
@@ -36,71 +36,70 @@
             <tr class="{{ tr_class }}">
                 <td>
                     {% set value = "{ process_name: '" + row.process_name + "', entry_name: '" + row.entry_name + "' }" %}
-                        <input type="checkbox" name="batch_processing" value="{{ value }}"/>
+                    <input type="checkbox" name="batch_processing" value="{{ value }}"/>
                 </td>
                 <td class="pl-1">{{ row.is_on }} / {{ row.is_alive }}</td>
                 <td>{{ row.process_name }}</td>
                 <td>{{ row.entry_name }}</td>
                 <td>
-                    <form class="table-form" method="POST" action="/freerun/entry/interval/">
-                            <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
-                            <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
-                        <input type="text" size="8" maxlength="32" name="interval"
-                                   value="{{ row.trigger_frequency }}"/>
-                            <button type="submit" class="action_button btn-icons btn-center" title="Apply">
-                                <i class="fa fa-check"></i></button>
+                    <form class="table-form" method="POST" action="/scheduler/freerun/entry/interval/">
+                        <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
+                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
+                        <input type="text" size="8" maxlength="32" name="interval" value="{{ row.trigger_frequency }}"/>
+                        <button type="submit" class="action_button btn-icons btn-center" title="Apply">
+                            <i class="fa fa-check"></i></button>
                     </form>
                 </td>
                 <td>
-                    <form class="table-form" method="POST" action="/freerun/entry/trigger/">
-                            <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
-                            <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
-                            <button type="submit" class="action_button btn-center" title="Trigger">
-                                <i class="fa fa-bolt"></i><span>Trigger</span></button>
+                    <form class="table-form" method="POST" action="/scheduler/freerun/entry/trigger/">
+                        <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
+                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
+                        <button type="submit" class="action_button btn-center" title="Trigger">
+                            <i class="fa fa-bolt"></i><span>Trigger</span></button>
                     </form>
                 </td>
 
                 <td>{{ row.next_run_in }}</td>
                 <td style="max-width: 180px">{{ row.arguments|jsonify }}</td>
                 <td class="button-col">
-                    {% set url = 'action=freerun/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                    {% set url = 'action=scheduler/freerun/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
                     <form class="table-form inline" method="GET"
-                        onsubmit="window.open('/viewer/object/?{{ url }}','View Uow',
-                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
-                            <button type="submit" class="action_button btn-icons btn-center" title="View Uow">
-                                <i class="fa fa-file-code-o"></i><span>Uow</span></button>
+                          onsubmit="window.open('/scheduler/viewer/object/?{{ url }}','View Uow',
+                                   `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                        <button type="submit" class="action_button btn-icons btn-center" title="View Uow">
+                            <i class="fa fa-file-code-o"></i><span>Uow</span></button>
                     </form>
 
-                    {% set url = 'action=freerun/log/uow' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                    {% set url = 'action=scheduler/freerun/uow/log' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
                     <form class="table-form inline" method="GET"
-                        onsubmit="window.open('/viewer/object/?{{ url }}','Uow Log',
-                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
-                            <button type="submit" class="action_button btn-icons btn-center" title="Log Uow">
-                                <i class="fa fa-file-text-o"></i><span>Log Uow</span></button>
+                          onsubmit="window.open('/scheduler/viewer/object/?{{ url }}','Uow Log',
+                                   `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth / 2},height=${window.innerHeight * 0.85}`); return false;">
+                        <button type="submit" class="action_button btn-icons btn-center" title="Log Uow">
+                            <i class="fa fa-file-text-o"></i><span>Log Uow</span></button>
                     </form>
 
-                    {% set url = 'action=freerun/log/event' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
+                    {% set url = 'action=scheduler/freerun/timeline' + '&process_name=' + row.process_name + '&entry_name=' + row.entry_name %}
                     <form class="table-form inline" method="GET"
-                        onsubmit="window.open('/viewer/object/?{{ url }}','Event Log',
-                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-icons btn-center" title="Event Uow"><i
-                                class="fa fa-th-list"></i><span>Event Log</span></button>
+                          onsubmit="window.open('/scheduler/viewer/object/?{{ url }}','Timeline',
+                                   `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
+                        <button type="submit" class="action_button btn-icons btn-center" title="Timeline">
+                            <i class="fa fa-history"></i><span>Timeline</span></button>
                     </form>
                 </td>
                 <td class="button-col">
-                    <form class="table-form inline" method="GET" action="/freerun/uow/cancel/">
-                            <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
-                            <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
-                            <button type="submit" class="action_button btn-icons btn-center" title="Cancel Uow">
-                                <i class="fa fa-remove"></i><span>Cancel</span></button>
+                    <form class="table-form inline" method="GET" action="/scheduler/freerun/uow/cancel/">
+                        <input type="hidden" name="process_name" value="{{ row.process_name }}"/>
+                        <input type="hidden" name="entry_name" value="{{ row.entry_name }}"/>
+                        <button type="submit" class="action_button btn-icons btn-center" title="Cancel Uow">
+                            <i class="fa fa-remove"></i><span>Cancel</span></button>
                     </form>
 
-                        {% set url = '/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_new_entry=False' %}
+                    {% set url = '/scheduler/viewer/schedulable/?process_name=' + row.process_name + '&entry_name=' + row.entry_name + '&is_new_entry=False' %}
                     <form class="table-form inline" method="GET"
-                        onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
-                    `toolbar=no,scrollbars=yes,resizable=yes,left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
-                        <button type="submit" class="action_button btn-icons btn-center" title="Edit"><i
-                                class="fa fa-edit"></i><span>Edit</span></button>
+                          onsubmit="window.open('{{ url }}','Edit Freerun Trigger',
+                                   `toolbar=no,scrollbars=yes,resizable=yes,left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
+                        <button type="submit" class="action_button btn-icons btn-center" title="Edit">
+                            <i class="fa fa-edit"></i><span>Edit</span></button>
                     </form>
                 </td>
             </tr>
@@ -108,10 +107,10 @@
 
             <tr>
                 <td colspan="13" style="text-align: right">
-                    {% set url = '/viewer/schedulable/?is_new_entry=True' %}
+                    {% set url = '/scheduler/viewer/schedulable/?is_new_entry=True' %}
                     <a href="#"
                         onclick="window.open('{{ url }}','New Freerun Trigger',
-                    `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
+                                `toolbar=no,scrollbars=yes,resizable=yes,top=${window.innerHeight * 0.15},left=${window.innerWidth * 0.15},width=${window.innerWidth * 2/3},height=${window.innerHeight * 0.85}`); return false;">
                         <i class="fa fa-plus"></i><span>&nbsp;Add New Freerun Trigger</span>
                     </a>
                 </td>
