--- a/synergy/mx/static/css/composite-processing-chart.css
+++ b/synergy/mx/static/css/composite-processing-chart.css
@@ -46,3 +46,25 @@ div.tooltip {
     border-radius: 2px;
     pointer-events: none;
 }
+
+div.job-tile {
+    position: absolute;
+    text-align: left;
+    width: 180px;
+    height: 110px;
+    padding: 2px;
+    font: 12px sans-serif;
+    border-radius: 2px;
+    border: 1px solid #ccc;
+}
+
+.close-button:after {
+    content: '×'; /* UTF-8 symbol */
+    color: #777;
+    font: 14px/100% arial, sans-serif;
+    position: absolute;
+    right: 5px;
+    text-decoration: none;
+    text-shadow: 0 1px 0 #fff;
+    top: 5px;
+}
