--- a/synergy/mx/templates/block_context_menu.html
+++ b/synergy/mx/templates/block_context_menu.html
@@ -2,18 +2,18 @@
     <div class="context_menu_hide" id="rmenu">
         <ul>
             <li>
-                <a onclick="processBatch({% if is_freerun %}'freerun/entry/activate'{% else %}'managed/entry/activate'{% endif %})">
+                <a onclick="processBatch({% if is_freerun %}'scheduler/freerun/entry/activate'{% else %}'scheduler/managed/entry/activate'{% endif %})">
                     <i class="fa fa-toggle-on"></i>&nbsp;Activate
                 </a>
             </li>
             <li>
-                <a onclick="processBatch({% if is_freerun %}'freerun/entry/deactivate'{% else %}'managed/entry/deactivate'{% endif %})">
+                <a onclick="processBatch({% if is_freerun %}'scheduler/freerun/entry/deactivate'{% else %}'scheduler/managed/entry/deactivate'{% endif %})">
                     <i class="fa fa-toggle-off"></i>&nbsp;Deactivate
                 </a>
             </li>
         </ul>
     </div>
-    <script type="text/javascript" src="{{ url_for('static', file='js/context_menu.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('scheduler/static', file='js/context_menu.js') }}"></script>
 {%- endmacro %}
 
 
@@ -21,16 +21,16 @@
     <div class="context_menu_hide" id="rmenu">
         <ul>
             <li>
-                <a onclick="processBatch('tree/node/skip')">
+                <a onclick="processBatch('scheduler/tree/node/skip')">
                     <i class="fa fa-step-forward"></i>&nbsp;Skip
                 </a>
             </li>
             <li>
-                <a onclick="processBatch('tree/node/reprocess')">
+                <a onclick="processBatch('scheduler/tree/node/reprocess')">
                     <i class="fa fa-repeat"></i>&nbsp;Reprocess
                 </a>
             </li>
         </ul>
     </div>
-    <script type="text/javascript" src="{{ url_for('static', file='js/context_menu.js') }}"></script>
+    <script type="text/javascript" src="{{ url_for('scheduler/static', file='js/context_menu.js') }}"></script>
 {%- endmacro %}
